--- a/rock-web/src/app/estrutura/topbar/app.topbar.component.html
+++ b/rock-web/src/app/estrutura/topbar/app.topbar.component.html
@@ -5,5 +5,5 @@
     <a id="menu-button" href="#" (click)="app.onMenuButtonClick($event)">
         <i class="fa-light fa-bars"></i>
     </a>
-    <app-user-detail [loginInfo]='loginInfo'></app-user-detail>
+    <app-user-detail></app-user-detail>
 </div>
