--- a/rock-web/src/app/admin/vaga/pesquisa/vaga-pesquisa.component.html
+++ b/rock-web/src/app/admin/vaga/pesquisa/vaga-pesquisa.component.html
@@ -4,10 +4,10 @@
             <div class='ui-fluid'>
                 <div class='p-grid'>
                     <div class='p-col-12 p-md-4'>
-                        <app-rotulo rotulo='Cliente'>
-                            <app-autocomplete url='cliente/pesquisa' dataKey='id'
+                        <app-rotulo rotulo='Empresa'>
+                            <app-autocomplete url='empresa/pesquisa' dataKey='id'
                                               label='{razaoSocial}'
-                                              formControlName='cliente'></app-autocomplete>
+                                              formControlName='empresa'></app-autocomplete>
                         </app-rotulo>
                     </div>
                     <div class='p-col-12 p-md-4'>
