--- a/rock-web/src/app/shared/ui/date-picker/date-picker.component.html
+++ b/rock-web/src/app/shared/ui/date-picker/date-picker.component.html
@@ -1,1 +1,1 @@
-<p-calendar  [formControl]='formCtrl' [showIcon]="true" [locale]="ptBR" [dateFormat]='ptBR.dateFormat' [showTime]="exibirHora" [showSeconds]="exibirSegundos" [hourFormat]='ptBR.hourFormat' appendTo="body" z-index="-1"></p-calendar>
+<p-calendar  [formControl]='formCtrl' [showIcon]="true" [locale]="ptBR" [dateFormat]='ptBR.dateFormat' [showTime]="exibirHora" [showSeconds]="exibirSegundos" [hourFormat]='ptBR.hourFormat' appendTo="body" z-index="-1" [disabled]="disabled"></p-calendar>
