--- a/rock-web/src/app/admin/usuario/usuario-manutencao/usuario-manutencao.component.html
+++ b/rock-web/src/app/admin/usuario/usuario-manutencao/usuario-manutencao.component.html
@@ -44,10 +44,16 @@
                                                 value="telefoneCelular"></p-inputMask>
                                 </app-rotulo>
                             </div>
-                            <div class='p-col-12 p-md-9'>
+                            <div class='p-col-12 p-md-6'>
                                 <app-rotulo rotulo='Endereço'>
                                     <input formControlName="endereco" pInputText type='text'
                                            maxlength="255"/>
+                                </app-rotulo>
+                            </div>
+                            <div class='p-col-12 p-md-3'>
+                                <app-rotulo rotulo='Complemento'>
+                                    <input formControlName="complemento" pInputText type='text'
+                                           maxlength="40"/>
                                 </app-rotulo>
                             </div>
                         </div>
