--- a/rock-web/src/app/empresa/pagina-inicial/pagina-inicial.component.html
+++ b/rock-web/src/app/empresa/pagina-inicial/pagina-inicial.component.html
@@ -1,3 +1,15 @@
 <p-header>
     <h4>Dashboard Empresa</h4>
 </p-header>
+<div class="p-grid">
+    <div class="p-col-12">
+        <p-panel header="Totalizadores" styleClass="circle-panel">
+            <div class="p-grid">
+                <div class="p-col-12 p-lg-6 p-md-6">
+                    <div class="status-title" style="color:#6ebc3b">Número de Vagas Ativas</div>
+                    <span>{{contadorVagasAtivas}}</span>
+                </div>
+            </div>
+        </p-panel>
+    </div>
+</div>
